src/parser/snapshots/tests__parse_bool.snap
---
source: src/parser/mod.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 0..36,
    children: [
        Node {
            ty: Identifier,
            text_range: 8..11,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 12..36,
            children: [
                Node {
                    ty: Decl,
                    text_range: 18..32,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 22..23,
                            children: [],
                        },
                        Node {
                            ty: Expr,
                            text_range: 27..31,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 27..31,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 27..31,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 27..31,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 27..31,
                                                            children: [
                                                                Node {
                                                                    ty: Bool(
                                                                        true,
                                                                    ),
                                                                    text_range: 27..31,
                                                                    children: [],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
