src/parser/snapshots/tests__parse_condition.snap
---
source: src/parser/mod.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 9..133,
    children: [
        Node {
            ty: Identifier,
            text_range: 17..18,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 27..133,
            children: [
                Node {
                    ty: While,
                    text_range: 45..121,
                    children: [
                        Node {
                            ty: Expr,
                            text_range: 52..57,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 52..57,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 52..53,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 52..53,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 52..53,
                                                            children: [
                                                                Node {
                                                                    ty: Identifier,
                                                                    text_range: 52..53,
                                                                    children: [],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                        Node {
                                            ty: LesserThan,
                                            text_range: 54..57,
                                            children: [
                                                Node {
                                                    ty: Factor,
                                                    text_range: 56..57,
                                                    children: [
                                                        Node {
                                                            ty: Product,
                                                            text_range: 56..57,
                                                            children: [
                                                                Node {
                                                                    ty: Unit,
                                                                    text_range: 56..57,
                                                                    children: [
                                                                        Node {
                                                                            ty: Identifier,
                                                                            text_range: 56..57,
                                                                            children: [],
                                                                        },
                                                                    ],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        Node {
                            ty: Compound,
                            text_range: 71..120,
                            children: [
                                Node {
                                    ty: Assign,
                                    text_range: 93..104,
                                    children: [
                                        Node {
                                            ty: Identifier,
                                            text_range: 93..94,
                                            children: [],
                                        },
                                        Node {
                                            ty: Expr,
                                            text_range: 98..103,
                                            children: [
                                                Node {
                                                    ty: Term,
                                                    text_range: 98..103,
                                                    children: [
                                                        Node {
                                                            ty: Factor,
                                                            text_range: 98..103,
                                                            children: [
                                                                Node {
                                                                    ty: Product,
                                                                    text_range: 98..99,
                                                                    children: [
                                                                        Node {
                                                                            ty: Unit,
                                                                            text_range: 98..99,
                                                                            children: [
                                                                                Node {
                                                                                    ty: Identifier,
                                                                                    text_range: 98..99,
                                                                                    children: [],
                                                                                },
                                                                            ],
                                                                        },
                                                                    ],
                                                                },
                                                                Node {
                                                                    ty: Plus,
                                                                    text_range: 100..103,
                                                                    children: [
                                                                        Node {
                                                                            ty: Product,
                                                                            text_range: 102..103,
                                                                            children: [
                                                                                Node {
                                                                                    ty: Unit,
                                                                                    text_range: 102..103,
                                                                                    children: [
                                                                                        Node {
                                                                                            ty: Int(
                                                                                                1,
                                                                                            ),
                                                                                            text_range: 102..103,
                                                                                            children: [],
                                                                                        },
                                                                                    ],
                                                                                },
                                                                            ],
                                                                        },
                                                                    ],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
